--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <header>
-      Discover hidden places in the world around you
+      <h1>Discover hidden places in the world around you</h1>
+      <a href="">Download Excursion (Coming Soon!)</a>
     </header>
+    <h2>Your personal travel guide</h2>
   </body>
 </html>
