--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
       <h1>Discover hidden places in the world around you</h1>
       <a href="">Download Excursion (Coming Soon!)</a>
     </header>
+    <video>
+      <source src="resources/excursion.mp4" type="video/mp4" autoplay>
+        Oops, your browser doesn't support this!
+    </video>
     <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points
+      of interest around you.</p>
+    <p>
+      <img src="resources/camp.webp" />
+    </p>
+    <p>
+      <img src="resources/phone.webp" />
+    </p>
+    <a href="">Download Excursion (Coming Soon!)</a>
   </body>
 </html>
