--- a/index.html
+++ b/index.html
@@ -24,4 +24,7 @@
     </p>
     <a href="">Download Excursion (Coming Soon!)</a>
   </body>
+  <footer>
+    <p>&#169; Excursion</p>
+  </footer>
 </html>
